src/objects/LeanData__Access_Level_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Access_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Round_Robin_Pool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Round Robin Pool</label>
        <referenceTo>LeanData__Round_Robin_Pool__c</referenceTo>
        <relationshipLabel>Access Round Robin Pool Reference</relationshipLabel>
        <relationshipName>Access_Round_Robin_Pool_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Unique_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Reference</relationshipLabel>
        <relationshipName>User_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Access Level Assignment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Level Assignment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Level Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>